--- a/src/components/Map/style.css
+++ b/src/components/Map/style.css
@@ -20,7 +20,7 @@
 
     background: rgba(255, 255, 255, 0.5);
 
-    z-index: 10;
+    z-index: 1;
   }
 }
 
@@ -75,5 +75,5 @@
   position: absolute;
   bottom: 1px;
   left: 85px;
-  z-index: 1;
+  z-index: 2;
 }
