--- a/src/components/Timeline/style.css
+++ b/src/components/Timeline/style.css
@@ -8,7 +8,7 @@
 
   background: white;
 
-  z-index: 1;
+  z-index: 2;
 
   ul {
     position: relative;
